[package]
name = "tping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
knuffel = "2.0.0"
teloxide-core = { version = "0.7.1", features = ["auto_send"] }
tokio = { version = "1.21.1", features = ["rt"] }

